--- a/css/main.css
+++ b/css/main.css
@@ -12,16 +12,19 @@ html {
 
 a {
   color: #568c36;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 a:hover {
   color: #113c00;
 }
 
+a:focus {
+  border-width: 3px;
+}
+
 .masthead {
   background-color: #568c36;
-
   color: #fff;
 }
 
